# research_paper_fetcher

./: .gitignore  LICENSE  README.md  pyproject.toml
paperfetcher/: __init__.py  api.py  cli.py  models.py  processor.py
research_paper_fetcher/: results.csv
tests/: test_api.py
