[tool.poetry]
name = "paperfetcher"
version = "0.1.0"
description = "A tool to fetch research papers from PubMed with pharmaceutical/biotech affiliations"
authors = ["Sathyam Raj <sathyamraj.inbox@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.31.0"
pandas = "^2.0.3"
typing-extensions = "^4.7.1"
python-dotenv = "^1.0.0"
click = "^8.1.4"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
mypy = "^1.5.1"
black = "^23.7.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
get-papers-list = "paperfetcher.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"